--- a/app/assets-webpacker/application.scss
+++ b/app/assets-webpacker/application.scss
@@ -1,9 +1,5 @@
+html,
 body {
   padding: 0;
   margin: 0;
-}
-
-.leaflet-tile-container img {
-  width: 256.5px !important;
-  height: 256.5px !important;
 }
